--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registrar-controvrs-accord/form-registrar-controvrs-accord.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/form-registrar-controvrs-accord/form-registrar-controvrs-accord.component.html
@@ -242,7 +242,7 @@
                             <mat-form-field class="example-full-width">
                                 <input matInput formControlName="fechaComitePretecnico"
                                     [matDatepicker]="pickerfechaComitePretecnico" readonly
-                                    (click)="pickerfechaComitePretecnico.open()" required placeholder="DD/MM/AAAA">
+                                    (click)="pickerfechaComitePretecnico.open()" placeholder="DD/MM/AAAA">
                                 <mat-datepicker #pickerfechaComitePretecnico></mat-datepicker>
                             </mat-form-field>
                             <button mat-button color="primary" type="button"
