--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/verdetalle-reclamacion-aseg-cc/verdetalle-reclamacion-aseg-cc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/verdetalle-reclamacion-aseg-cc/verdetalle-reclamacion-aseg-cc.component.html
@@ -17,9 +17,9 @@
             </mat-card-title>
         </mat-card-header>
         <mat-card-content style="text-align: left;">
-            <p><strong>Resumen de la propuesta de reclamación ante la fiduciaria:</strong></p>
+            <p><strong>Breve descripción de la ocurrencia del siniestro y valor de la estimación de perjuicios:</strong></p>
             <div [innerHtml]="this.resumen"></div> 
-            <p><strong>¿Se requiere presentar la propuesta de reclamación a comité técnico?:</strong> {{this.requiereReclamacionComite}}</p>
+            <p><strong>¿Se requiere presentar la ocurrencia del siniestro y valor de la estimación de perjuicios a comité técnico?:</strong> {{this.requiereReclamacionComite}}</p>
         </mat-card-content>
     </mat-card>
     <mat-card class="shipping-card mainGris">
