--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/manejo-material-insumo/manejo-material-insumo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/manejo-material-insumo/manejo-material-insumo.component.html
@@ -83,12 +83,12 @@
                   <label class="label-left">URL con soporte</label>
                 </div>
                 <div class="col d-flex">
-                    <mat-form-field style="width: 94%;">
-                        <input  matInput
-                                type="text"
-                                maxlength="400"
-                                formControlName="urlRegistroFotografico">
-                    </mat-form-field>
+                    <mat-form-field style="width: 95%;">
+                      <input  matInput
+                              type="url"
+                              minlength="0"
+                              formControlName="urlRegistroFotografico">
+                  </mat-form-field>
                 </div>
                 <div class="d-flex justify-content-center size-text-descriptivo">
                     <p class="color-text-descriptivo">
