--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
@@ -139,24 +139,24 @@
             <div class="col d-flex">
               <mat-form-field class="full-width">
                 <input
-                    matInput
-                    formControlName="presupuestoAdicional"
-                    #presupuestoAdicional
-                    maxlength="20"
-                    min="1"
-                    max="99999999999999999999"
-                    required
-                    currencyMask
-                    onKeyPress="if(this.value.length>=this.maxLength) return false;"
-                    [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }"
-                  />
+                  matInput
+                  formControlName="presupuestoAdicional"
+                  #presupuestoAdicional
+                  maxlength="20"
+                  min="1"
+                  max="99999999999999999999"
+                  required
+                  currencyMask
+                  onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }"
+                />
               </mat-form-field>
               <span
-              class="contador"
-              [matTooltipPosition]="'above'"
-              matTooltip="Valor en ($) Pesos colombianos"
-              matTooltip
-              Class="info-tooltip"
+                class="contador"
+                [matTooltipPosition]="'above'"
+                matTooltip="Valor en ($) Pesos colombianos"
+                matTooltip
+                Class="info-tooltip"
               >
                 {{ 20 - presupuestoAdicional.value.length }}
               </span>
@@ -179,65 +179,66 @@
           </div>
         </div>
       </div>
-
       <div
-        class="row"
         *ngIf="
           novedadDescripcion.tipoNovedadCodigo == '1' ||
           novedadDescripcion.tipoNovedadCodigo == '2' ||
           novedadDescripcion.tipoNovedadCodigo === '6'
         "
       >
-        <div class="col-md-8">
-          <div class="row">
-            <div class="pr-1">
-              <label
-                class="label-left"
-                for="fechaInicio"
-                [class.color-secondaryColor]="
-                  (addressForm.get('fechaInicio').invalid && addressForm.get('fechaInicio').touched) ||
-                  (addressForm.get('fechaInicio').invalid && estaEditando)
-                "
-              >
-                Fecha de inicio de la suspensión
-              </label>
-            </div>
-            <div class="col d-flex">
-              <mat-form-field class="example-full-width">
-                <input
-                  matInput
-                  [matDatepicker]="pickerPlazoInicio"
-                  formControlName="fechaInicio"
-                  readonly
-                  (click)="pickerPlazoInicio.open()"
-                  placeholder="DD/MM/AAAA"
-                  required
-                />
-                <mat-datepicker #pickerPlazoInicio></mat-datepicker>
-              </mat-form-field>
-              <button
-                mat-button
-                color="primary"
-                type="button"
-                (click)="pickerPlazoInicio.open()"
-                class="btn-calendario"
-              >
-                <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario" />
-              </button>
-              <span class="icon-incompleto">
-                <img
-                  class="icon-incompleto--img"
-                  src="assets/img/icon/incompleto.svg"
-                  alt="este campo es requerido"
-                  [matTooltipPosition]="'above'"
-                  matTooltip="Debe ingresar la información en el campo para continuar"
-                  matTooltipClass="info-tooltip"
-                  *ngIf="
+        <mat-card-title class="header-card--text sub-text"> Plazo solicitado </mat-card-title>
+        <div class="row">
+          <div class="col-md-8">
+            <div class="row">
+              <div class="pr-1">
+                <label
+                  class="label-left"
+                  for="fechaInicio"
+                  [class.color-secondaryColor]="
                     (addressForm.get('fechaInicio').invalid && addressForm.get('fechaInicio').touched) ||
                     (addressForm.get('fechaInicio').invalid && estaEditando)
                   "
-                />
-              </span>
+                >
+                  Fecha de inicio de la suspensión
+                </label>
+              </div>
+              <div class="col d-flex">
+                <mat-form-field class="example-full-width">
+                  <input
+                    matInput
+                    [matDatepicker]="pickerPlazoInicio"
+                    formControlName="fechaInicio"
+                    readonly
+                    (click)="pickerPlazoInicio.open()"
+                    placeholder="DD/MM/AAAA"
+                    required
+                  />
+                  <mat-datepicker #pickerPlazoInicio></mat-datepicker>
+                </mat-form-field>
+                <button
+                  mat-button
+                  color="primary"
+                  type="button"
+                  (click)="pickerPlazoInicio.open()"
+                  class="btn-calendario"
+                >
+                  <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario" />
+                </button>
+                <span class="icon-incompleto">
+                  <img
+                    class="icon-incompleto--img"
+                    src="assets/img/icon/incompleto.svg"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
+                    *ngIf="
+                      (addressForm.get('fechaInicio').invalid && addressForm.get('fechaInicio').touched) ||
+                      (addressForm.get('fechaInicio').invalid && estaEditando)
+                    "
+                  />
+                </span>
+              </div>
             </div>
           </div>
         </div>
@@ -303,7 +304,7 @@
         Plazo solicitado
       </mat-card-title>
 
-      <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '4'">
+      <!-- <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '4'">
         <div class="col-md-8">
           <div class="row">
             <div class="pr-1">
@@ -315,23 +316,24 @@
                   (addressForm.get('plazoAdicionalMeses').invalid && estaEditando)
                 "
               >
-                Plazo Adicional Meses
+                Plazo adicional solicitado en meses
               </label>
             </div>
             <div class="col d-flex">
               <mat-form-field class="full-width">
-                  <input
-                    matInput
-                    formControlName="plazoAdicionalMeses"
-                    #plazoAdicionalMeses
-                    maxlength="20"
-                    min="1"
-                    max="99999999999999999999"
-                    required
-                    currencyMask
-                    onKeyPress="if(this.value.length>=this.maxLength) return false;"
-										[options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }"
-                  />
+                <input
+                  matInput
+                  type="number"
+                  formControlName="plazoAdicionalMeses"
+                  #plazoAdicionalMeses
+                  maxlength="2"
+                  min="1"
+                  max="99"
+                  required
+                  (keypress)="validateNumberKeypress($event)"
+                  onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+                />
               </mat-form-field>
               <span
                 class="contador"
@@ -339,7 +341,7 @@
                 matTooltip="Valor en ($) Pesos colombianos"
                 matTooltipClass="info-tooltip"
               >
-                {{ 20 - plazoAdicionalMeses.value.length }}
+                {{ 2 - plazoAdicionalMeses.value.length }}
               </span>
               <span class="icon-incompleto">
                 <img
@@ -359,8 +361,8 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '4'">
+      </div> -->
+      <!-- <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '4'">
         <div class="col-md-8">
           <div class="row">
             <div class="pr-1">
@@ -372,23 +374,24 @@
                   (addressForm.get('plazoAdicionalDias').invalid && estaEditando)
                 "
               >
-                Plazo Adicional Días
+                Plazo adicional solicitado en días
               </label>
             </div>
             <div class="col d-flex">
               <mat-form-field class="full-width">
                 <input
-                    matInput
-                    formControlName="plazoAdicionalDias"
-                    #plazoAdicionalDias
-                    maxlength="20"
-                    min="1"
-                    max="99999999999999999999"
-                    required
-                    currencyMask
-                    onKeyPress="if(this.value.length>=this.maxLength) return false;"
-                    [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }"
-                  />
+                  matInput
+                  type="number"
+                  formControlName="plazoAdicionalDias"
+                  #plazoAdicionalDias
+                  maxlength="2"
+                  min="1"
+                  max="99"
+                  required
+                  (keypress)="validateNumberKeypress($event)"
+                  onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+                />
               </mat-form-field>
               <span
                 class="contador"
@@ -396,7 +399,7 @@
                 matTooltip="Valor en ($) Pesos colombianos"
                 matTooltipClass="info-tooltip"
               >
-                {{ 20 - plazoAdicionalDias.value.length }}
+                {{ 2 - plazoAdicionalDias.value.length }}
               </span>
               <span class="icon-incompleto">
                 <img
@@ -410,6 +413,102 @@
                     (addressForm.get('plazoAdicionalDias').invalid && addressForm.get('plazoAdicionalDias').touched) ||
                     (addressForm.get('plazoAdicionalDias').invalid && estaEditando)
                   "
+                />
+              </span>
+            </div>
+          </div>
+        </div>
+      </div> -->
+      <div class="row" *ngIf="novedadDescripcion.tipoNovedadCodigo == '4'">
+        <div class="col-md-12">
+          <div class="row">
+            <div class="pr-1">
+              <label class="label-left"> Plazo adicional solicitado: </label>
+            </div>
+            <div class="col d-flex">
+              <label
+                class="label-left sub-label italic"
+                [class.color-secondaryColor]="
+                  (addressForm.get('plazoAdicionalMeses').invalid && addressForm.get('plazoAdicionalMeses').touched) ||
+                  (addressForm.get('plazoAdicionalMeses').invalid && estaEditando)
+                "
+              >
+                Meses
+              </label>
+              <mat-form-field class="w-8em">
+                <input
+                  matInput
+                  type="number"
+                  formControlName="plazoAdicionalMeses"
+                  #plazoAdicionalMeses
+                  maxlength="2"
+                  min="1"
+                  max="99"
+                  required
+                  (keypress)="validateNumberKeypress($event)"
+                  onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+                />
+              </mat-form-field>
+
+              <span class="contador">
+                {{ 2 - plazoAdicionalMeses.value.length }}
+              </span>
+              <span class="icon-incompleto">
+                <img
+                  *ngIf="
+                    (addressForm.get('plazoAdicionalMeses').invalid &&
+                      addressForm.get('plazoAdicionalMeses').touched) ||
+                    (addressForm.get('plazoAdicionalMeses').invalid && estaEditando)
+                  "
+                  class="icon-incompleto--img"
+                  src="assets/img/icon/incompleto.svg"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
+                />
+              </span>
+              <label
+                class="label-left sub-label italic"
+                [class.color-secondaryColor]="
+                  (addressForm.get('plazoAdicionalDias').invalid && addressForm.get('plazoAdicionalDias').touched) ||
+                  (addressForm.get('plazoAdicionalDias').invalid && estaEditando)
+                "
+              >
+                Días
+              </label>
+              <mat-form-field class="w-8em">
+                <input
+                  matInput
+                  type="number"
+                  formControlName="plazoAdicionalDias"
+                  #plazoAdicionalDias
+                  maxlength="2"
+                  min="1"
+                  max="99"
+                  required
+                  (keypress)="validateNumberKeypress($event)"
+                  onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
+                />
+              </mat-form-field>
+
+              <span class="contador">
+                {{ 2 - plazoAdicionalDias.value.length }}
+              </span>
+              <span class="icon-incompleto">
+                <img
+                  *ngIf="
+                    (addressForm.get('plazoAdicionalDias').invalid && addressForm.get('plazoAdicionalDias').touched) ||
+                    (addressForm.get('plazoAdicionalDias').invalid && estaEditando)
+                  "
+                  class="icon-incompleto--img"
+                  src="assets/img/icon/incompleto.svg"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
                 />
               </span>
             </div>
