--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
@@ -23,8 +23,8 @@
       <td mat-cell *matCellDef="let element">{{element.numeroSolicitud}}</td>
     </ng-container>
 
-    <!-- tipoNovedad Column -->
-    <ng-container matColumnDef="tipoNovedadNombre">
+    <!-- novedadesSeleccionadas Column -->
+    <ng-container matColumnDef="novedadesSeleccionadas">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de novedad</th>
       <td mat-cell *matCellDef="let element">{{element.novedadesSeleccionadas}}</td>
     </ng-container>
