--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-descuentos-direccion-tecnica/form-descuentos-direccion-tecnica.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-descuentos-direccion-tecnica/form-descuentos-direccion-tecnica.component.html
@@ -141,7 +141,7 @@
                                                         </mat-option>
                                                     </mat-select>
                                                     <mat-select formControlName="tipoDescuentoCodigo" required *ngIf="descuento.get('tipoDescuentoCodigo').value !== null">
-                                                        <mat-option *ngFor="let tipoDescuento of listaTipoDescuento" [value]="tipoDescuento.codigo">
+                                                        <mat-option *ngFor="let tipoDescuento of getTipoDescuentoSeleccionado( descuento.get('tipoDescuentoCodigo').value )" [value]="tipoDescuento.codigo">
                                                             {{ tipoDescuento.nombre }}
                                                         </mat-option>
                                                     </mat-select>
