--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-social/gestion-social.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-social/gestion-social.component.html
@@ -208,7 +208,7 @@
                               <div class="row">
                                 <div class="pr-1">
                                     <label class="label-left">
-                                        URL con soporte
+                                        URL soporte de la gestión social
                                     </label>
                                 </div>
                                 <div class="col d-flex">
