--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-sst/gestion-sst.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/gestion-sst/gestion-sst.component.html
@@ -278,7 +278,7 @@
                             <div class="col-md-12">
                               <div class="row">
                                 <div class="pr-1">
-                                  <label class="label-left">URL soporte de la gestión de calidad</label>
+                                  <label class="label-left">URL soporte de la gestión en seguridad y salud en el trabajo</label>
                                 </div>
                                 <div class="col d-flex">
                                     <mat-form-field style="width: 96%;">
