--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/tabla-validar-avance-semanal/tabla-validar-avance-semanal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/tabla-validar-avance-semanal/tabla-validar-avance-semanal.component.html
@@ -18,7 +18,7 @@
 
         <ng-container matColumnDef="fechaReporte">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha del reporte </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.fechaReporte | date: 'dd/MM/yyyy' }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.fechaReporte }} </td>
         </ng-container>
 
         <ng-container matColumnDef="llaveMen">
@@ -42,7 +42,7 @@
         </ng-container>
 
         <ng-container matColumnDef="sede">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Sede </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Sede educativa </th>
             <td mat-cell *matCellDef="let element" align="center"> {{ element.sede }} </td>
         </ng-container>
 
