--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/manejo-material-insumo/manejo-material-insumo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/manejo-material-insumo/manejo-material-insumo.component.html
@@ -3,7 +3,7 @@
       <div class="row">
         <div class="col-md-12">
             <div class="row">
-                <h3> <b> Proveedor {{ i+1 }} </b> </h3>
+                <h3 style="font-size: 1.6em;"> <b> Proveedor {{ i+1 }} </b> </h3>
             </div>
         </div>
     </div>
