--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -33,7 +33,7 @@
               <ng-container matColumnDef="No">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>No.</th>
                 <td mat-cell *matCellDef="let element">
-                  <span [class.color-secondaryColor]="element.validacionCodigo === '' && estaEditando">
+                  <span [class.color-secondaryColor]="!element.validacionCodigo && estaEditando">
                     <b>{{ element.informeFinalListaChequeo.orden }}</b>
                   </span>
                 </td>
@@ -43,7 +43,7 @@
               <ng-container matColumnDef="item">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Ítem</th>
                 <td mat-cell *matCellDef="let element">
-                  <span [class.color-secondaryColor]="element.validacionCodigo === '' && estaEditando">
+                  <span [class.color-secondaryColor]="!element.validacionCodigo && estaEditando">
                     {{ element.informeFinalListaChequeo.listaChequeoItem.nombre }}
                   </span>
                 </td>
@@ -53,7 +53,7 @@
               <ng-container matColumnDef="calificacionCodigoString">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Calificación interventoría</th>
                 <td mat-cell *matCellDef="let element">
-                  <span [class.color-secondaryColor]="element.validacionCodigo === '' && estaEditando">
+                  <span [class.color-secondaryColor]="!element.validacionCodigo && estaEditando">
                     {{ element.calificacionCodigoString }}
                   </span>
                 </td>
@@ -64,7 +64,7 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de anexo</th>
                 <td mat-cell *matCellDef="let element">
                   <div *ngIf="element.calificacionCodigo === '1'">
-                    <span [class.color-secondaryColor]="element.validacionCodigo === '' && estaEditando">
+                    <span [class.color-secondaryColor]="!element.validacionCodigo && estaEditando">
                       {{ element.informeFinalAnexo.tipoAnexoString }}
                     </span>
                   </div>
@@ -77,7 +77,7 @@
                 <td mat-cell *matCellDef="let element">
                   <div
                     *ngIf="element.calificacionCodigo === '1'"
-                    [class.color-secondaryColor]="element.validacionCodigo === '' && estaEditando"
+                    [class.color-secondaryColor]="!element.validacionCodigo && estaEditando"
                   >
                     <!--Físico-->
                     <span *ngIf="element.informeFinalAnexo.tipoAnexo === '1'">
@@ -103,7 +103,7 @@
 
               <!-- verificacion Column -->
               <ng-container matColumnDef="validacionCodigo">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Verificación</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Validación</th>
                 <td mat-cell *matCellDef="let element">
                   <section
                     class="slect-table-contain mt-1em"
@@ -123,7 +123,7 @@
                     <mat-form-field
                       class="select-width"
                       [class.mat-form-field-invalid]="
-                        element.validacionCodigo === '' && estaEditando
+                        !element.validacionCodigo && estaEditando
                       "
                     >
                       <mat-label>
@@ -142,7 +142,7 @@
                         [(ngModel)]="element.validacionCodigo"
                         (selectionChange)="changeState(element)"
                         [class.mat-select-invalid]="
-                          element.validacionCodigo === '' && estaEditando
+                          !element.validacionCodigo && estaEditando
                         "
                         required
                       >
@@ -159,7 +159,7 @@
                         [matTooltipPosition]="'above'"
                         matTooltip="Debe ingresar la información en el campo para continuar"
                         matTooltipClass="info-tooltip"
-                        *ngIf="element.validacionCodigo === '' && estaEditando"
+                        *ngIf="!element.validacionCodigo && estaEditando"
                       />
                     </span>
                   </section>
