--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/dialog-observaciones/dialog-observaciones.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/dialog-observaciones/dialog-observaciones.component.html
@@ -30,8 +30,8 @@
     </span>
   </p>
   <p>
-    <b> {{ data.informe.informeFinalListaChequeo.posicion }}. </b>
-    {{ data.informe.informeFinalListaChequeo.nombre }}
+    <b> {{ data.informe.informeFinalListaChequeo.orden }}. </b>
+    {{ data.informe.informeFinalListaChequeo.listaChequeoItem.nombre }}
   </p>
 </div>
 
