--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -108,7 +108,7 @@
               <!-- validacion Column -->
               <ng-container matColumnDef="aprobacionCodigo">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                  Verificación
+                  Validación
                 </th>
                 <td mat-cell *matCellDef="let element">
                   <section class="slect-table-contain mt-1em">
