--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
@@ -568,9 +568,9 @@
                       matTooltip="Debe ingresar la información en el campo para continuar"
                       matTooltipClass="info-tooltip"
                       *ngIf="
-                        (addressForm.get('clausulaModificar').invalid &&
-                          addressForm.get('clausulaModificar').touched) ||
-                        (addressForm.get('clausulaModificar').invalid && estaEditando)
+                        (addressForm.get('clausulaModificar')?.invalid &&
+                          addressForm.get('clausulaModificar')?.touched) ||
+                        (addressForm.get('clausulaModificar')?.invalid && estaEditando)
                       "
                     />
                   </span>
